Testy/IPP-test.php-master/parse-only/vyzi_tests/should-pass/no_arg_instructions1.src
.IPPcode20
CREATEFRAME
PUSHFRAME
POPFRAME
RETURN
BREAK
