Testy/IPP-test.php-master/parse-only/vyzi_tests/should-fail/wrong_arg_count1.src
.IPPcode20
CREATEFRAME GF@ABC
